--- a/user.html
+++ b/user.html
@@ -3,15 +3,27 @@
 
   <!-- 🔍 Search & Filter Controls -->
   <div class="user-controls">
-    <input type="text" id="search-input" placeholder="Search by name or email..." />
-    <select id="role-filter">
-      <option value="All">All Roles</option>
-      <option value="Admin">Admin</option>
-      <option value="Maintenance">Maintenance</option>
-      <option value="User">User</option>
-    </select>
+    <div class="left-controls">
+      <input
+        type="text"
+        id="search-input"
+        placeholder="Search by name or email..."
+      />
+      <select id="role-filter">
+        <option value="All">All Roles</option>
+        <option value="Admin">Admin</option>
+        <option value="Maintenance">Maintenance</option>
+        <option value="User">User</option>
+      </select>
+    </div>
+
+    <!-- ➕ Add User button -->
+    <button id="addUserBtn" class="btn-primary add-user-btn">
+      ➕ Add User
+    </button>
   </div>
 
+  <!-- 📋 Users Table -->
   <div class="user-table-wrapper">
     <table id="user-table">
       <thead>
@@ -23,8 +35,55 @@
         </tr>
       </thead>
       <tbody id="user-table-body">
-        <tr><td colspan="4" class="loading">Loading users...</td></tr>
+        <tr>
+          <td colspan="4" class="loading">Loading users...</td>
+        </tr>
       </tbody>
     </table>
+  </div>
+</div>
+
+<!-- ============================= -->
+<!-- 👤 Add User Modal -->
+<!-- ============================= -->
+<div id="addUserModal" class="modal">
+  <div class="modal__inner">
+    <button id="au-close" class="modal-close">&times;</button>
+    <h3>➕ Add New User</h3>
+
+    <label for="au-firstName">First Name</label>
+    <input type="text" id="au-firstName" placeholder="Enter first name" />
+
+    <label for="au-lastName">Last Name</label>
+    <input type="text" id="au-lastName" placeholder="Enter last name" />
+
+    <label for="au-email">Email</label>
+    <input type="email" id="au-email" placeholder="Enter email address" />
+
+    <label for="au-role">Role</label>
+    <select id="au-role">
+      <option value="User">User</option>
+      <option value="Maintenance">Maintenance</option>
+      <option value="Admin">Admin</option>
+    </select>
+
+    <div class="modal-actions">
+      <button id="au-submit" class="btn btn-primary">Create User</button>
+      <button id="au-cancel" class="btn btn-secondary">Cancel</button>
+    </div>
+  </div>
+</div>
+
+<!-- ============================= -->
+<!-- 🔐 Generated Password Modal -->
+<!-- ============================= -->
+<div id="au-passwordModal" class="modal">
+  <div class="modal__inner password-modal">
+    <button id="au-closePassword" class="modal-close">&times;</button>
+    <h3>✅ User Created Successfully</h3>
+    <p style="margin:10px 0 6px 0;">Here is the generated password:</p>
+    <div id="au-passwordBox" class="password-box"></div>
+    <button id="au-copyPassword" class="btn btn-primary copy-btn">Copy</button>
+    <p class="note">Please share this password securely with the user.</p>
   </div>
 </div>
