--- a/landingpage.html
+++ b/landingpage.html
@@ -12,7 +12,7 @@
       
       <!-- Left Container -->
       <div class="landing-box landing-left">
-        <h1>Systems and Technology Institute<br>(STI Dasmariñas)</h1>
+        <h1>STI Dasmariñas</h1>
         <p>
           Systems and Technology Institute (STI) – Dasmariñas is one of the leading educational institutions in Cavite,
           providing top-notch education in Information Technology, Engineering, Business, and allied programs.
