--- a/profile.html
+++ b/profile.html
@@ -39,6 +39,9 @@
       <div class="profile-label">Role:</div>
       <div id="profile-role">Loading...</div>
 
+      <div class="profile-label">Position:</div>
+      <div id="profile-position">Loading...</div>
+
       <div class="profile-label">Created At:</div>
       <div id="profile-created">Loading...</div>
     </div>
