--- a/tasks.html
+++ b/tasks.html
@@ -38,6 +38,7 @@
       Below are all inventory items and their upcoming maintenance due dates.
     </p>
 
+    <div class="maintenance-table-wrapper">
     <table class="maintenance-table">
       <thead>
         <tr>
@@ -50,6 +51,7 @@
         <!-- Populated dynamically -->
       </tbody>
     </table>
+  </div>
   </div>
 </div>
 
