--- a/user.html
+++ b/user.html
@@ -31,12 +31,13 @@
           <th>Email</th>
           <th>Name</th>
           <th>Role</th>
+          <th>Position</th>
           <th>Date Created</th>
         </tr>
       </thead>
       <tbody id="user-table-body">
         <tr>
-          <td colspan="4" class="loading">Loading users...</td>
+          <td colspan="5" class="loading">Loading users...</td>
         </tr>
       </tbody>
     </table>
