--- a/item.html
+++ b/item.html
@@ -29,6 +29,8 @@
         <p><strong>Laboratory:</strong> <span id="item-lab"></span></p>
         <p><strong>Condition:</strong> <span id="item-condition" class="condition-badge"></span></p>
         <p><strong>Date Added:</strong> <span id="item-date"></span></p>
+        <p><strong>Purchase Date:</strong> <span id="item-purchase-date"></span></p>
+        <p><strong>Purchase Cost:</strong> <span id="item-purchase-cost"></span></p>
       </div>
     </div>
 
